2013/09/09: IGAS v47
    1. New property , attribtue system bring into the lua.
    2. Reduce the memory increasement, and reduce the cpu cost to increase the fps.

2013/08/13: IGAS v46
    1. The object oriented program system now all moved to Loop folder, separated from the other part for wow.
    2. Reduce the memory and cpu usage.

2013/08/04: IGAS v45
    1. Remove old unit check to make sure the unit frame's refresh should be done well when point to different raid/party member.

2013/08/03: IGAS v44
    1. Fix the pet's updating for warlock.

2013/08/03: IGAS v43
    1. Reduce cpu and memory cost for pet panel system.

2013/07/26: IGAS v42
    1. Taint with Blizzard_RaidUI fixed.
    2. Imrpove the action button system.

2013/07/25: IGAS v42
    1. New group system for IFGroup, bases on the blizzard's SecureGroupHeader, all works smooth during combat.

2013/07/22:
	1. Re design the System.Widget.Unit.IFGroup, the unit panel should be worked based on the blizzard's SecureGroupHeader.

2013/07/16:
	1. Give the ScrollForm's default ScrollChild a default height, so the ScrollChild:GetTop() will return a not-nil value.

2013/07/14: IGAS v41
	1. Improve the System.Widget.Unit.IFGroup and IFPetGroup, now the raid panel can be show when entering the game in combat mode.More settings added to these interfaces.

2013/07/04:
    1. System.Widget.Unit.UnitFrame can handle the change of attribute "unit"

2013/06/30:
    1. Remove the __index and __newindex settings in the System.Widget.Unit.IFSpellHandler.SpellHandlerGroup, use properties to reduce cost and better for browsing.

2013/06/28: IGAS v40
    1. Improve the System.Widget.Unit.IFResurrect, make sure its objects will be hidden when the resurrection is over
    2. Fix the System.Widget.Unit.LevelLabel, refresh when the LevelFormat is changed

2013/06/27: IGAS v39
    1. Delete the custom event system from System.Object.
    2. Keyword 'script' is renamed to 'event'.
    3. Update all files with those changes.